pyproject: `dev` includes wheel and build
Signed-off-by: William Woodruff <william@trailofbits.com>

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -44,7 +44,7 @@ lint = [
     "interrogate",
     {%- endif %}
 ]
-dev = ["{{ cookiecutter.project_slug }}[doc,test,lint]", "twine"]
+dev = ["{{ cookiecutter.project_slug }}[doc,test,lint]", "twine", "wheel", "build"]
 
 {% if cookiecutter.entry_point -%}
 [project.scripts]
