pyproject: enable all ruff lints
Signed-off-by: William Woodruff <william@trailofbits.com>

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -83,7 +83,7 @@ warn_unused_ignores = true
 
 [tool.ruff]
 line-length = 100
-select = ["E", "F", "W", "UP", "I", "N", "YTT", "BLE", "C4", "SIM"]
+select = ["ALL"]
 target-version = "py38"
 
 [tool.interrogate]
