--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -32,10 +32,10 @@ doc = [
 ]
 test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
 lint = [
-    "black>=22.3.0",
+    "black ~= 23.0",
     # NOTE: ruff is under active development, so we pin conservatively here
     # and let Dependabot periodically perform this update.
-    "ruff < 0.0.255",
+    "ruff < 0.0.293",
     "mypy >= 1.0",
     "types-html5lib",
     "types-requests",
