--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,14 +19,44 @@ jobs:
       - name: install cookiecutter
         run: python -m pip install cookiecutter
 
-      - name: run template
+      - name: run template (default)
         run: |
-          cookiecutter --no-input . -o /tmp
+          cookiecutter --no-input -o /tmp .
 
-          [[ -d /tmp/python-project ]] || { >&2 echo "not generated?"; exit 1; }
+          [[ -d /tmp/python-project/python_project ]] || { >&2 echo "not generated?"; exit 1; }
 
           cd /tmp/python-project
           make dev
+          make reformat
+          make lint
           make test
           make package
+          make doc
 
+      - name: run template (namespace)
+        run: |
+          cookiecutter --no-input -o /tmp . project_namespace_import=tob.r_and_e
+
+          [[ -d /tmp/tob-r-and-e-python-project/python_project ]] || { >&2 echo "not generated?"; exit 1; }
+
+          cd /tmp/tob-r-and-e-python-project
+          make dev
+          make reformat
+          make lint
+          make test
+          make package
+          make doc
+
+      - name: run template (namespace, short slug)
+        run: |
+          cookiecutter --no-input -o /tmp . project_namespace_import=tob.r_and_e "project_name=Bit Trails" project_slug=bit-trails
+
+          [[ -d /tmp/bit-trails/tob/r_and_e/bit_trails ]] || { >&2 echo "not generated?"; exit 1; }
+
+          cd /tmp/bit-trails
+          make dev
+          make reformat
+          make lint
+          make test
+          make package
+          make doc
