Use `src` for Python source directory
`src` is a blessed project layout directory for source files, and most
tools support it.

This layout also decreases complexity in the Makefile.

Module and namespace directories will go inside it.

--- a/{{cookiecutter.project_slug}}/Makefile
+++ b/{{cookiecutter.project_slug}}/Makefile
@@ -1,9 +1,8 @@
 SHELL := /bin/bash
 
-PY_SRC_DIR = {{ cookiecutter.__project_src_path }}
 PY_IMPORT = {{ cookiecutter.__project_import }}
 
-ALL_PY_SRCS := $(shell find $(PY_SRC_DIR) -name '*.py') \
+ALL_PY_SRCS := $(shell find src -name '*.py') \
 	$(shell find test -name '*.py')
 
 # Optionally overriden by the user, if they're using a virtual environment manager.
