pyproject: tweak ruff config
Signed-off-by: William Woodruff <william@trailofbits.com>

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -88,8 +88,10 @@ warn_unused_ignores = true
 
 [tool.ruff]
 line-length = 100
-select = ["ALL"]
 target-version = "py38"
+
+[tool.ruff.lint]
+select = ["ALL"]
 
 [tool.ruff.per-file-ignores]
 "{{ cookiecutter.__project_src_path }}/_cli.py" = [
