--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -32,7 +32,6 @@ doc = [
 ]
 test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
 lint = [
-    "black ~= 23.0",
     # NOTE: ruff is under active development, so we pin conservatively here
     # and let Dependabot periodically perform this update.
     "ruff < 0.0.293",
@@ -60,9 +59,6 @@ Source = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.
 [tool.flit.module]
 name = "{{ cookiecutter.__project_import }}"
 
-[tool.black]
-line-length = 100
-
 [tool.coverage.run]
 # don't attempt code coverage for the CLI entrypoints
 omit = ["{{ cookiecutter.__project_src_path }}/_cli.py"]
@@ -88,8 +84,10 @@ warn_unused_ignores = true
 
 [tool.ruff]
 line-length = 100
-select = ["ALL"]
 target-version = "py38"
+
+[tool.ruff.lint]
+select = ["ALL"]
 
 [tool.ruff.per-file-ignores]
 "{{ cookiecutter.__project_src_path }}/_cli.py" = [
