--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -34,7 +34,7 @@ test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
 lint = [
     # NOTE: ruff is under active development, so we pin conservatively here
     # and let Dependabot periodically perform this update.
-    "ruff < 0.0.293",
+    "ruff ~= 0.2",
     "mypy >= 1.0",
     "types-html5lib",
     "types-requests",
@@ -89,10 +89,12 @@ target-version = "py38"
 [tool.ruff.lint]
 select = ["ALL"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
+{% if cookiecutter.entry_point -%}
 "{{ cookiecutter.__project_src_path }}/_cli.py" = [
     "T201", # allow `print` in cli module
 ]
+{%- endif %}
 "test/**/*.py" = [
     "D",    # no docstrings in tests
     "S101", # asserts are expected in tests
