dependabot: group GHA updates
Signed-off-by: William Woodruff <william@trailofbits.com>

--- a/{{cookiecutter.project_slug}}/.github/dependabot.yml
+++ b/{{cookiecutter.project_slug}}/.github/dependabot.yml
@@ -8,5 +8,9 @@ updates:
 
   - package-ecosystem: github-actions
     directory: /
+    groups:
+      actions:
+        patterns:
+          - "*"
     schedule:
       interval: daily
