dependabot: group Python pip updates

--- a/{{cookiecutter.project_slug}}/.github/dependabot.yml
+++ b/{{cookiecutter.project_slug}}/.github/dependabot.yml
@@ -3,6 +3,10 @@ version: 2
 updates:
   - package-ecosystem: pip
     directory: /
+    groups:
+      python:
+        patterns:
+          - "*"
     schedule:
       interval: daily
 
