pyproject: drop wheel dev-dep
This is handled transparently by `build`.

Signed-off-by: William Woodruff <william@trailofbits.com>

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -39,7 +39,7 @@ lint = [
     "interrogate",
     {%- endif %}
 ]
-dev = ["{{ cookiecutter.project_slug }}[doc,test,lint]", "twine", "wheel", "build"]
+dev = ["{{ cookiecutter.project_slug }}[doc,test,lint]", "twine", "build"]
 
 {% if cookiecutter.entry_point -%}
 [project.scripts]
