--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["flit_core >=3.5,<4"]
-build-backend = "flit_core.buildapi"
-
 [project]
 name = "{{ cookiecutter.project_slug }}"
 dynamic = ["version"]
@@ -43,7 +39,7 @@ lint = [
     "interrogate",
     {%- endif %}
 ]
-dev = ["{{ cookiecutter.project_slug }}[doc,test,lint]", "twine", "wheel", "build"]
+dev = ["{{ cookiecutter.project_slug }}[doc,test,lint]", "twine", "build"]
 
 {% if cookiecutter.entry_point -%}
 [project.scripts]
@@ -55,9 +51,6 @@ Homepage = "https://pypi.org/project/{{ cookiecutter.project_slug }}"
 Documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}/"
 Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
 Source = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
-
-[tool.flit.module]
-name = "{{ cookiecutter.__project_import }}"
 
 [tool.coverage.run]
 # don't attempt code coverage for the CLI entrypoints
