--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -30,7 +30,7 @@ test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
 lint = [
     # NOTE: ruff is under active development, so we pin conservatively here
     # and let Dependabot periodically perform this update.
-    "ruff ~= 0.4.0",
+    "ruff ~= 0.6.2",
     "mypy >= 1.0",
     "types-html5lib",
     "types-requests",
@@ -77,7 +77,7 @@ warn_unused_ignores = true
 
 [tool.ruff]
 line-length = 100
-target-version = "py38"
+include = ["src/**/*.py", "test/**/*.py"]
 
 [tool.ruff.lint]
 select = ["ALL"]
@@ -97,9 +97,11 @@ ignore = ["D203", "D213", "COM812", "ISC001"]
     "S101", # asserts are expected in tests
 ]
 
+{%- if cookiecutter.docstring_coverage %}
 [tool.interrogate]
 # don't enforce documentation coverage for packaging, testing, the virtual
 # environment, or the CLI (which is documented separately).
 exclude = ["env", "test", "{{ cookiecutter.__project_src_path }}/_cli.py"]
 ignore-semiprivate = true
 fail-under = 100
+{%- endif %}
