--- a/{{cookiecutter.project_slug}}/.github/workflows/docs.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/docs.yml
@@ -16,6 +16,13 @@ jobs:
           python-version-file: pyproject.toml
           cache: "pip"
           cache-dependency-path: pyproject.toml
+    
+      - name: install uv
+        run: >
+          curl --no-progress-meter --location --fail
+          --proto '=https' --tlsv1.2
+          "https://astral.sh/uv/install.sh"
+          | sh
 
       - name: setup
         run: |
