--- a/{{cookiecutter.project_slug}}/.github/workflows/docs.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version-file: pyproject.toml
-          cache: "pip"
+          # cache: "uv"  # Wait on https://github.com/actions/setup-python/pull/818 to be merged
           cache-dependency-path: pyproject.toml
     
       - name: install uv
