--- a/{{cookiecutter.project_slug}}/.github/workflows/release.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/release.yml
@@ -22,17 +22,14 @@ jobs:
       with:
         persist-credentials: false
 
-    - uses: actions/setup-python@v5
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
       with:
-        python-version-file: pyproject.toml
-        # cache: "uv"  # Wait on https://github.com/actions/setup-python/pull/818 to be merged
-        # cache-dependency-path: pyproject.toml
-
-    - name: deps
-      run: python -m pip install -U setuptools build wheel
+        enable-cache: true
+        cache-dependency-glob: pyproject.toml
 
     - name: build
-      run: python -m build
+      run: uvx --from build pyproject-build --installer uv
 
     - name: publish
       uses: pypa/gh-action-pypi-publish@release/v1
