--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -20,6 +20,9 @@ classifiers = [
 dependencies = []
 requires-python = ">=3.9"
 
+[tool.setuptools.dynamic]
+version = { attr = "{{ cookiecutter.__project_import }}.__version__" }
+
 [project.optional-dependencies]
 doc = [
     {%- if cookiecutter.documentation == "pdoc" -%}
