Build packages using `uv build`

--- a/{{cookiecutter.project_slug}}/Makefile
+++ b/{{cookiecutter.project_slug}}/Makefile
@@ -91,7 +91,7 @@ doc:
 
 .PHONY: package
 package: $(VENV)/pyvenv.cfg
-	uvx --from build pyproject-build --installer uv
+	uv build
 
 .PHONY: edit
 edit:
