--- a/{{cookiecutter.project_slug}}/.github/workflows/release.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         cache-dependency-glob: pyproject.toml
 
     - name: build
-      run: uvx --from build pyproject-build --installer uv
+      run: uv build
 
     - name: publish
       uses: pypa/gh-action-pypi-publish@release/v1
