--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -28,7 +28,7 @@ build-backend = "hatchling.build"
 path = "{{ cookiecutter.__project_src_path }}/__init__.py"
 
 [tool.hatch.build.targets.wheel]
-packages = ["{{ cookiecutter.__project_src_path }}"]
+packages = ["{{ cookiecutter.__project_src_first }}"]
 
 [tool.setuptools.dynamic]
 version = { attr = "{{ cookiecutter.__project_import }}.__version__" }
