ci: update `setup-uv` action
The new `6.0.0` version of `setup-uv` includes `**/pyproject.toml` in
the paths that invalidate the cache, so there's no need to specify it
manually anymore.

Furthermore, the cache for GitHub-hosted runners is enabled by default
since `v5`, so this commit removes the redundant line to enable it.

Signed-off-by: Facundo Tuesca <facundo.tuesca@trailofbits.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,9 +15,8 @@ jobs:
           persist-credentials: false
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@c7f87aa956e4c323abf06d5dec078e358f6b4d04 # v6
         with:
-          enable-cache: true
           cache-dependency-glob: cookiecutter.json
 
       # we need the git config setup here to make sure the subsequent git commit in each test works
