remove complicated venv management from Makefile
uv does all this stuff automatically already
uv run also installs the dev group by default so there's no need to make
it configurable

--- a/{{cookiecutter.project_slug}}/.github/workflows/lint.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/lint.yml
@@ -20,4 +20,4 @@ jobs:
         uses: astral-sh/setup-uv@445689ea25e0de0a23313031f5fe577c74ae45a1 # v6.3.0
 
       - name: lint
-        run: make lint INSTALL_EXTRA=lint
+        run: make lint
