exclude /.github in source dist

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -32,6 +32,9 @@ path = "{{ cookiecutter.__project_src_path }}/__init__.py"
 [tool.hatch.build.targets.wheel]
 packages = ["{{ cookiecutter.__project_src_first }}"]
 
+[tool.hatch.build.targets.sdist]
+exclude = ["/.github"]
+
 [tool.setuptools.dynamic]
 version = { attr = "{{ cookiecutter.__project_import }}.__version__" }
 
