group dependabot updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,10 @@ updates:
       default-days: 7
     directories:
         - "/"
+    groups:
+      actions:
+        patterns:
+          - "*"
     schedule:
       interval: daily
 
@@ -18,5 +22,9 @@ updates:
       default-days: 7
     directories:
         - "{{cookiecutter.project_slug}}/.github/workflows"
+    groups:
+      actions:
+        patterns:
+          - "*"
     schedule:
       interval: daily
