--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -3,12 +3,13 @@ name = "{{ cookiecutter.project_slug }}"
 dynamic = ["version"]
 description = "{{ cookiecutter.project_description }}"
 readme = "README.md"
+license-files = ["LICENSE"]
 {%- if cookiecutter.license == "Apache 2.0" %}
-license = {text = "Apache-2.0"}
+license = "Apache-2.0"
 {%- elif cookiecutter.license == "AGPL v3" %}
-license = {text = "AGPL-3.0-or-later"}
+license = "AGPL-3.0-or-later"
 {%- elif cookiecutter.license == "Proprietary" %}
-license = {file = "LICENSE"}
+license = "LicenseRef-Proprietary-License"
 {%- endif %}
 
 authors = [
@@ -18,7 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = []
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 
 [tool.setuptools.dynamic]
 version = { attr = "{{ cookiecutter.__project_import }}.__version__" }
@@ -33,7 +34,7 @@ test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
 lint = [
     # NOTE: ruff is under active development, so we pin conservatively here
     # and let Dependabot periodically perform this update.
-    "ruff ~= 0.6.2",
+    "ruff ~= 0.14.8",
     "pyright >= 1.1",
     "types-html5lib",
     "types-requests",
@@ -62,14 +63,14 @@ omit = ["{{ cookiecutter.__project_src_path }}/_cli.py"]
 [tool.pyright]
 # Type checking configuration
 include = ["src", "test"]
-pythonVersion = "3.11"
+pythonVersion = "3.10"
 typeCheckingMode = "strict"
 useLibraryCodeForTypes = true
 reportMissingTypeStubs = false
 
 [tool.ruff]
 line-length = 100
-target-version = "py311"
+target-version = "py310"
 
 [tool.ruff.format]
 line-ending = "lf"
@@ -123,8 +124,7 @@ fail-under = 100
 {%- endif %}
 
 [tool.pytest.ini_options]
-# Support tests living beside code
-testpaths = ["src", "test"]
-python_files = ["test_*.py", "*_test.py"]
+testpaths = ["test"]
+python_files = ["test_*.py"]
 # Show test durations
 addopts = "--durations=10"
