--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -36,10 +36,7 @@ lint = [
     # NOTE: ruff is under active development, so we pin conservatively here
     # and let Dependabot periodically perform this update.
     "ruff ~= 0.14.0",
-    "pyright ~= 1.1.407",
-    "types-html5lib",
-    "types-requests",
-    "types-toml",
+    "pyright",
     {%- if cookiecutter.docstring_coverage %}
     "interrogate",
     {%- endif %}
@@ -48,6 +45,7 @@ dev = [
     {include-group = "doc"},
     {include-group = "test"},
     {include-group = "lint"},
+    "pre-commit",
 ]
 
 {% if cookiecutter.entry_point -%}
@@ -72,7 +70,7 @@ typeCheckingMode = "strict"
 reportUnusedImport = "warning"
 reportUnusedVariable = "warning"
 reportGeneralTypeIssues = "error"
-reportMissingTypeStubs = false
+reportMissingTypeStubs = true
 
 [tool.ruff]
 line-length = 100
