Add precommit hooks via prek and default ruff/pytest configuration (#84)
Adds pre-commit hooks via https://github.com/j178/prek and configures stricter code quality defaults.

Changes:

Pre-commit hooks using prek (format, lint on commit; tests on push)
New make dev target to set up dev environment and install hooks
Stricter ruff rules: cyclomatic complexity ≤8, max 5 positional args, max 12 branches
pytest config with --durations=10
Updated deps: ruff ~=0.14.0, pyright ~=1.1, removed unused type stubs

--- a/{{cookiecutter.project_slug}}/Makefile
+++ b/{{cookiecutter.project_slug}}/Makefile
@@ -21,6 +21,11 @@ endif
 all:
 	@echo "Run my targets individually!"
 
+.PHONY: dev
+dev:
+	uv sync --group dev
+	uv run prek install
+
 {%- if cookiecutter.entry_point %}
 .PHONY: run
 run:
@@ -32,11 +37,8 @@ lint:
 	uv sync --group lint
 	uv run ruff format --check && \
 		uv run ruff check && \
-		uv run pyright
-
-	{%- if cookiecutter.docstring_coverage %}
-		uv run interrogate -c pyproject.toml .
-	{%- endif %}
+		uv run pyright{% if cookiecutter.docstring_coverage %} && \
+		uv run interrogate -c pyproject.toml .{% endif %}
 
 .PHONY: format
 format:
