--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -4,7 +4,6 @@ version = "{{ cookiecutter.version }}"
 description = "{{ cookiecutter.project_description }}"
 readme = "README.md"
 license-files = ["LICENSE"]
-
 {%- if cookiecutter.license == "Apache 2.0" %}
 license = "Apache-2.0"
 {%- elif cookiecutter.license == "AGPL v3" %}
@@ -36,11 +35,8 @@ test = ["pytest", "pytest-cov", "pytest-timeout", "pretend", "coverage[toml]"]
 lint = [
     # NOTE: ruff is under active development, so we pin conservatively here
     # and let Dependabot periodically perform this update.
-    "ruff ~= 0.12",
-    "pyright ~= 1.1.407",
-    "types-html5lib",
-    "types-requests",
-    "types-toml",
+    "ruff ~= 0.14.0",
+    "pyright ~= 1.1",
     {%- if cookiecutter.docstring_coverage %}
     "interrogate",
     {%- endif %}
@@ -49,6 +45,7 @@ dev = [
     {include-group = "doc"},
     {include-group = "test"},
     {include-group = "lint"},
+    "prek",
 ]
 
 {% if cookiecutter.entry_point -%}
@@ -68,33 +65,58 @@ omit = ["{{ cookiecutter.__project_src_path }}/_cli.py"]
 
 [tool.pyright]
 include = ["src", "test"]
-exclude = []
+pythonVersion = "3.10"
+typeCheckingMode = "strict"
 reportUnusedImport = "warning"
 reportUnusedVariable = "warning"
 reportGeneralTypeIssues = "error"
-typeCheckingMode = "strict"
+reportMissingTypeStubs = true
 
 [tool.ruff]
 line-length = 100
-include = ["src/**/*.py", "test/**/*.py"]
+target-version = "py310"
+
+[tool.ruff.format]
+line-ending = "lf"
+quote-style = "double"
 
 [tool.ruff.lint]
 select = ["ALL"]
-# D203 and D213 are incompatible with D211 and D212 respectively.
-# COM812 and ISC001 can cause conflicts when using ruff as a formatter.
-# See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
-ignore = ["D203", "D213", "COM812", "ISC001"]
+ignore = [
+    "D203",  # Incompatible with D211
+    "D213",  # Incompatible with D212
+    "COM812",  # Can conflict with formatter
+    "ISC001",  # Can conflict with formatter
+]
+
+[tool.ruff.lint.mccabe]
+# Maximum cyclomatic complexity
+max-complexity = 8
+
+[tool.ruff.lint.pydocstyle]
+# Use Google-style docstrings
+convention = "google"
+
+[tool.ruff.lint.pylint]
+# Maximum number of branches for function or method
+max-branches = 12
+# Maximum number of return statements in function or method
+max-returns = 6
+# Maximum number of positional arguments for function or method
+max-positional-args = 5
 
 [tool.ruff.lint.per-file-ignores]
 {% if cookiecutter.entry_point -%}
 "{{ cookiecutter.__project_src_path }}/_cli.py" = [
-    "T201", # allow `print` in cli module
+    "T201", # allow print in cli module
 ]
 {%- endif %}
 "test/**/*.py" = [
     "D",    # no docstrings in tests
     "S101", # asserts are expected in tests
+    "PLR2004",  # Allow magic values in tests
 ]
+"**/conftest.py" = ["D"]  # No docstrings in pytest config
 
 {%- if cookiecutter.docstring_coverage %}
 [tool.interrogate]
@@ -104,6 +126,11 @@ exclude = ["env", "test", "{{ cookiecutter.__project_src_path }}/_cli.py"]
 ignore-semiprivate = true
 fail-under = 100
 {%- endif %}
+
+[tool.pytest.ini_options]
+testpaths = ["test"]
+python_files = ["test_*.py"]
+addopts = "--durations=10"
 
 [tool.uv.sources]
 {{ cookiecutter.project_slug }} = { workspace = true }
